# quasar

./: .gitignore  Cargo.toml  Makefile  README.md  run_kani_audit.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: bpf_loader.rs  build.rs  clean.rs  config.rs  deploy.rs  dump.rs  idl.rs  init.rs  keys.rs  lib.rs  main.rs  multisig.rs  new.rs  rpc.rs  sync.rs  test.rs  toolchain.rs  update.rs  utils.rs
core/: Cargo.toml
core/src/: borsh.rs  context.rs  dynamic.rs  entrypoint.rs  error.rs  event.rs  lib.rs  log.rs  macros.rs  pda.rs  pod.rs  prelude.rs  remaining.rs  return_data.rs  traits.rs
core/src/accounts/: account.rs  program.rs  system_account.rs  sysvar.rs
core/src/checks/: owner.rs
core/src/cpi/: buf.rs  mod.rs  system.rs
core/src/sysvars/: mod.rs
core/tests/: account_validation.rs  cpi.rs  expansion.rs  miri.rs
core/tests/compile_fail/: dynamic_vec_alignment.rs  error_code_on_struct.rs  event_tuple_struct.rs  event_unsupported_string.rs  event_unsupported_type.rs  instruction_vec_alignment.rs  zero_discriminator_account.rs  zero_discriminator_single.rs
derive/: Cargo.toml
derive/src/: accounts.rs  declare_program.rs  error_code.rs  event.rs  helpers.rs  instruction.rs  lib.rs  program.rs  serialize.rs
derive/src/account/: accessors.rs  dynamic.rs  fixed.rs  mod.rs
derive/src/accounts/: attrs.rs  client.rs  composition.rs  field_kind.rs  fields.rs  fields_process.rs  init.rs  instruction_args.rs  mod.rs
docs/: accounts.md  cli.md  cpi.md  idl.md  tokens.md
docs/superpowers/specs/: 2026-03-22-native-deploy-design.md
examples/anchor-vault/: Cargo.toml
examples/anchor-vault/src/: lib.rs  tests.rs
examples/escrow/: Cargo.toml
examples/escrow/client/: Cargo.toml
examples/escrow/src/: lib.rs  state.rs  tests.rs
examples/escrow/src/instructions/: make.rs  refund.rs  take.rs
examples/multisig/client/: Cargo.toml
examples/multisig/src/: lib.rs  state.rs  tests.rs
examples/pinocchio-vault/src/: constants.rs  lib.rs  tests.rs
examples/upstream-vault/.cargo/: config.toml
examples/upstream-vault/client/: Cargo.toml
examples/upstream-vault/src/: lib.rs
examples/vault/client/: Cargo.toml
examples/vault/src/: lib.rs
idl/: Cargo.toml
idl/src/: codegen.rs  codegen_ts.rs  main.rs  types.rs
idl/src/codegen/: golang.rs  python.rs  rust.rs  typescript.rs
idl/src/parser/: accounts.rs  events.rs  helpers.rs  mod.rs  module_resolver.rs  state.rs
idl/tests/: parser.rs
lang/: Cargo.toml
lang/src/: account_exit.rs  account_init.rs  account_inner.rs  account_load.rs  borsh.rs  context.rs  dynamic.rs  error.rs  event.rs  instruction_arg.rs  instruction_data.rs  lib.rs  pda.rs  prelude.rs  remaining.rs  traits.rs  validation.rs
lang/src/accounts/: account.rs  interface.rs  interface_account.rs  program.rs  signer.rs  system_account.rs  (+2 more)
lang/tests/: instruction_arg.rs  miri.rs
metadata/src/: codec.rs  state.rs
pod/src/: lib.rs  string.rs  vec.rs
pod/tests/: types.rs
profile/: Cargo.toml
profile/src/: aggregate.rs  output.rs
scripts/: bench-tracked-programs.sh  check-workspace-lints.sh  perf-baselines.env
spl/: Cargo.toml
spl/src/: close.rs  constants.rs  cpi.rs  exit.rs  init.rs  lib.rs  state.rs  token.rs  token_2022.rs  validate.rs
spl/src/associated_token/: init.rs  mod.rs  validate.rs
spl/src/helpers/: init.rs
spl/src/instructions/: approve.rs  burn.rs  initialize_mint.rs  mint_to.rs  mod.rs  transfer.rs  transfer_checked.rs
spl/src/interface/: mod.rs
spl/src/metadata/: cpi.rs  init.rs  state.rs
spl/src/metadata/instructions/: create_master_edition.rs  create_metadata.rs  mod.rs  update_metadata.rs
src/: context.rs  example.rs  lib.rs  macros.rs  prelude.rs  token.rs  traits.rs
src/accounts/: account.rs  initialize.rs  mod.rs  rent.rs  signer.rs  system_account.rs  token_account.rs  unchecked.rs
src/checks/: address.rs  executable.rs  mod.rs  mutable.rs  signer.rs
src/cpi/: mod.rs  system.rs
src/programs/: mod.rs  system.rs  token.rs
src/sysvars/: mod.rs  rent.rs
(+75 files in other folders)
