[package]
name = "quasar-cli"
description = "CLI for the Quasar Solana framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "quasar"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11"
quasar-idl = { version = "0.0.0", path = "../idl" }
quasar-profile = { version = "0.0.0", path = "../profile" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
toml = "0.8"
anyhow = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
dirs = "6"
indicatif = "0.18.4"
clap_complete = "4.6.0"
ctrlc = "3.4"
syn = { version = "2", features = ["full", "parsing"] }
solana-transaction = { version = "3", features = ["bincode"] }
solana-signer = "3"
solana-hash = "3"
solana-signature = "3"
solana-message = { version = "3", features = ["bincode"] }
solana-instruction = "3"
solana-address = { version = "2", features = ["curve25519"] }
sha2 = "0.10"
base64 = "0.22"
ureq = { version = "3", features = ["json"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
