[package]
name = "quasar-spl"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-core = { path = "../core" }
solana-account-view = "1.0.0"
solana-address = { version = "2.2.0", features = ["copy"] }
solana-program-error = "3.0.0"
