[package]
name = "quasar-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
quasar-core = { path = "../../core" }
quasar-spl = { path = "../../spl" }
wincode = { version = "0.4.4", features = ["derive"] }