[package]
name = "quasar-multisig-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
quasar-lang = { path = "../../../lang" }
wincode = { version = "=0.4.9", features = ["derive"] }
solana-address = { version = "=2.2.0", features = ["curve25519", "wincode"] }
solana-instruction = "3"
